Adding base styling and some css resets, trying out normalize.css as well

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
-@import "styles/paralax.scss";
-@import "styles/AR-Styles.scss";
+// Browser Styling Reset
+@import "styles/_reset";
+
+@import "styles/_base";
 
 body {
   font-family: sans-serif;
