Testing normalize.css for base reset on styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,4 @@
 // Browser Styling Reset
-@import "styles/_reset";
+// @import "styles/_reset";
 
 @import "styles/_base";
-
-body {
-  font-family: sans-serif;
-}
